--- a/src/erlang/test_client.html
+++ b/src/erlang/test_client.html
@@ -137,6 +137,14 @@
                 <label>Min Duration (sec):</label>
                 <input type="number" id="postMinDuration" value="300">
             </div>
+            <div class="form-group">
+                <label>Min Bid Increment:</label>
+                <input type="number" id="postMinIncrementBid" value="10" step="0.01">
+            </div>
+            <div class="form-group">
+                <label>Time Increment (sec):</label>
+                <input type="number" id="postTimeIncrementBid" value="30">
+            </div>
             <button onclick="postAuction()">POST Auction</button>
             
             <br>
@@ -293,7 +301,9 @@
             const data = {
                 id: document.getElementById('postAuctionId').value,
                 starting_price: parseFloat(document.getElementById('postStartPrice').value),
-                min_duration: parseInt(document.getElementById('postMinDuration').value)
+                min_duration: parseInt(document.getElementById('postMinDuration').value),
+                min_increment_bid: parseFloat(document.getElementById('postMinIncrementBid').value),
+                time_increment_bid: parseInt(document.getElementById('postTimeIncrementBid').value)
             };
             
             addMessage('Posting auction ' + data.id ,'info');
